2014-05-01  Joern Rennecke  <joern.rennecke@embecosm.com>

	* configure.ac (AC_CONFIG_FILES): Add include/sys/Makefile.
	* include/Makefile.am (avr_HEADERS): Add fcntl.h, locale.h, unistd.h.
	(SUBDIRS): Add sys.
	* include/errno.h: Add definitions for error codes required to compile
	libstdc++-v3.
	* include/locale.h, include/unistd.h, include/fcntl.h: New files.
	* include/stdio.h (FILE): Change to a typedef.
	(BUFSIZ, _IONBF): Define.
	(fpos_t): Typedef.
	(fgetpos, fopen, freopen, fdopen, fseek, fsetpos, ftell): Prototype.
	(ftell, fileno, perror, remote, rename, rewind, setbuf): Likewise.
	(setvbuf, tmpfile, tmpnam): Likewise.
	* include/stdlib.h (atexit, system, getenv): Prototype.
	* include/string.h (strcoll, strerror, strxfrm): Prototype.
	* include/sys: New directory.
	* include/time.h (_CLOCKS_PER_SEC_): Declare.
	(CLOCKS_PER_SEC): Define.
	(clock): Declare.
	* libc/stdlib/Files.am (stdlib_a_c_sources): Add atexit.c, getenv.c,
	system.c
	* libc/stdlib/atexit.c: New file.
	* libc/stdlib/getenv.c, * libc/stdlib/system.c: New stub files.

2014-05-01  Joern Rennecke  <joern.rennecke@embecosm.com>

	* include/stdint.h [!__USING_MINT8] (UINT8_MAX): Provide (signed)
	int value.
	(SIZE_MAX): Define as UINT16_MAX.
	[!WCHAR_MAX] (WCHAR_MAX, WCHAR_MIN): Define.
	[!WINT_MAX] (WINT_MAX, WINT_MIN): Define.

2014-05-01  Joern Rennecke  <joern.rennecke@embecosm.com>

	* include/stdint.h (INT8_C): Also define for __cplusplus >= 201103L.
	If __INT8_C is defined, use GNU C preprocessor builtin-macro
	for the definition.
	(INT16_C INT32_C, INT64_C, UINT8_C, UINT16_C, UINT32_C): Likewise.
	(UINT64_C, INTMAX_C, UINTMAX_C): Likewise.

2014-04-29  Aurelien Jarno  <aurelien@aurel32.net>

	* include/util/setbaud.h: correct typo.

2014-04-29  George Thomas <george.thomas@atmel.com>

	Fix for bug #37103: ATtiny5/9/10/20/40 watchdog can't be enabled
	* include/avr/wdt.h: Add wdt_enable and wdt_disable macros for tiny 4,5,
	9,10,20 and 40 devices.
